--- a/contact.html
+++ b/contact.html
@@ -26,21 +26,8 @@ $(function(){
 </head>
 <!-- External CSS-->
 <link rel="stylesheet" type="text/css" href="style.css">
-<body >	
-	<div id="myCarousel" class="carousel slide" data-ride="carousel" style="position: absolute; top: 0px;">
-	    <!-- Wrapper for slides -->
-	    <div class="carousel-inner">
-  		    <div class="item ">
-    	 	   <img src="images/pic6.jpeg" alt='image'>
-    		</div>
-       		<div class="item active ">
-    		    <img src="images/pic5.jpg" alt='image'>
-      		</div>
-       		<div class="item ">
-        		<img src="images/pic4.jpg" alt='image'>
-      	    </div>
-		</div>
-	</div>
+<body style="background-image: url(images/gra4.png);" >	
+	
 	<!--Navbar-->
 	<nav>
 		<ul id="nav1" >
@@ -49,7 +36,7 @@ $(function(){
 		<ul id="nav2">
 			<li><a href="contact.html">Contact Us</a></li>
 			<li>|</li>
-			<li><a href="#">Products</a></li>
+			<li><a href="products.html">Products</a></li>
 			<li>|</li>
 			<li><a href="index.html">Home</a></li>
 		</ul>		
