--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ $(function(){
 		<ul id="nav2" >
 			<li><a href="contact.html">Contact Us</a></li>
 			<li>|</li>
-			<li><a href="#">Products</a></li>
+			<li><a href="products.html">Products</a></li>
 			<li>|</li>
 			<li class="active"><a  href="index.html" >Home</a></li>
 		</ul>		
