--- a/products.html
+++ b/products.html
@@ -91,7 +91,7 @@ $(document).ready(function(){
 						    </div>
 						</div> 						
 					</div>
-					<div class="name">Lorem 1</div> 	
+					<div class="name">Lorem 1 <a href="#" target="blank">info</a></div> 	
 				</div>
 				<div class="pro_box21">
 					<div class="info_box" >
