--- a/info.html
+++ b/info.html
@@ -74,7 +74,7 @@
 			
 			<div class="col-sm-6" id="elem3">
 				<div  id="elem2" style="display: block;">
-					<h1>pepsi</h1>
+					<h1>pepi</h1>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
