--- a/info.html
+++ b/info.html
@@ -57,6 +57,11 @@
 			<li><a href="index.html">Home</a></li>
 		</ul>		
 	</nav>
+
+
+
+
+
 	<section style="padding-top: 7%;margin: 0% 4%;">
 		<div class="row">
 			<div class="col-sm-1" >
@@ -82,7 +87,6 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</div>
-				<div id="heya"></div>
 				<div id="myresult" ></div>
 			</div>		
 		</div>
@@ -91,8 +95,11 @@
 function changeImage(a) {
        // document.getElementById("myimage").src=a;
         $('#myimage').attr('src', a);
+        imageZoom("myimage", "myresult");
     }
-
+ //   if(document.getElementById("myimage").src==document.getElementById("operation1").src){
+   // 	=imageZoom("operation1", "myresult");
+    //}
 
 
 /*
@@ -167,14 +174,9 @@ function changeImage(a) {
 		    return {x : x, y : y};
 		  }
 		}
-		imageZoom("myimage", "myresult");
+		
 		
 		///// w3school code ends here///////
-		var x=document.getElementById("myimage")
-        var abc=document.getElementById("heya");
-        abc.innerHTML=x.src;
-
-
 
 
 		///// for locating current page  ///////
