--- a/info.html
+++ b/info.html
@@ -95,11 +95,14 @@
 function changeImage(a) {
        // document.getElementById("myimage").src=a;
         $('#myimage').attr('src', a);
-        imageZoom("myimage", "myresult");	
+
+       	
         
     }
 function runfunction(){
-	
+	 $('.img-zoom-lens').remove();
+        imageZoom("myimage", "myresult");
+	 
 } 
  //   if(document.getElementById("myimage").src==document.getElementById("operation1").src){
    // 	=imageZoom("operation1", "myresult");
@@ -129,6 +132,7 @@ function runfunction(){
 		  /*create lens:*/
 		  lens = document.createElement("DIV");
 		  lens.setAttribute("class", "img-zoom-lens");
+		 //if([elem.getElementsByClassName(".img-zoom-lens")]==false)
 		  /*insert lens:*/
 		  img.parentElement.insertBefore(lens, img);
 		  /*calculate the ratio between result DIV and lens:*/
