--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,115 @@
 <title>Harbans Industries</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+<!-------BOOTSTRAP 4-------->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-----FONTAWESOME AND GOOGLE FONTS----->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,300,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+</head>
+<!-- External CSS-->
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="query.css">
+<body style="background-image: url(images/gra4.png);" >	
+	
+	<!--Navbar-->
+	<div class="navbarhid">	
+	<nav class="navbar navbar-expand-sm d-flex justify-content-between navbarc">
+		<!--div class="navbar-header"-->
+      		<a class="navbar-brand" href="#">Harbans Industries</a>
+   		<!--/div-->	
+		<ul class=" navbar-nav nav_e">
+			<li class="active nav-item"><a class="nav-link" href="index.html">Home</a></li>
+			<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+			<li class="nav-item"><a class="nav-link" href="contact.html" >Contact Us</a></li>			
+		</ul>	
+		<ul  class="nav navbar-nav nav_c">
+			<li><a class="disabled"><i class="fas fa-bars hm_togglea" ></i></a></li>	
+			
+		</ul>
+	</nav></div>
+
+	<!------navbar toggle-------->
+	<nav class="hb_toggle">
+		<div>
+			<ul class="navbar-nav justify-content-end mt-3">
+				<li><a class="nav-item hm_toggleda"><i class="fas fa-times hm_toggled" style="font-size:1.5em;"></i></a>
+				</li>
+			</ul>
+			<div class="hb_toggle_n">
+				<ul class="navbar-nav ">
+					<li class="active nav-item"><a class="nav-link" href="index.html">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+					<li class="nav-item"><a class="nav-link" href="contact.html" >Contact Us</a></li>	
+				</ul>	
+			</div>
+		</div>
+	</nav>
+
+	<div style="position: relative;">
+	<section id="contact_sec">
+		<div class="row">
+			<div class="col-sm-7">
+				<form>
+					<div class="row">
+						<div class="col-sm-6">
+							<input type="" name="" placeholder=" Your Name*" class="con_fip">
+							<input type="" name="" placeholder="Your Country*" class="con_fip">
+						</div>
+						<div class="col-sm-6">
+							<input type="" name="" placeholder="E-mail*" class="con_fip">
+							<input type="" name="" placeholder="Phone no.*" class="con_fip">
+						</div>						
+					</div>
+					<div class="row">
+						<div class="col-sm-12">
+							<textarea name="" placeholder="Message"  class="con_fip" row="5"></textarea>
+						</div>
+					</div>
+				
+					<div style="display: block;">
+						<span class="con_iq" style="font-family: 'Montserrat', sans-serif; font-weight: 500;padding:">Nature of business:-</span>
+						<div class="con_i">
+							<label class="radio-inline"><input type="radio" name="business" checked>Wholesale</label>
+							<label class="radio-inline"><input type="radio" name="business" >Retail</label>
+							<label class="radio-inline"><input type="radio" name="business">Other</label>
+						</div>
+					</div>
+					<div style="display: block;">
+						<span class="con_i2q" style="font-family: 'Montserrat', sans-serif; font-weight: 500;">Company type:-</span>
+						<div class="con_i2">
+							<label class="radio-inline" ><input type="radio" name="Company" checked>Retail</label>
+							<label class="radio-inline"><input type="radio" name="Company">Bulk</label>
+						</div>
+					</div>
+					<button>Send Message</button>			
+				</form>			
+			</div>
+			<div class="col-sm-5">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.627241806035!2d77.31272521744383!3d28.370117199999992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cdc6ddc0701df%3A0x8d9acfc7d0d3f1f7!2sEscorts+Mujesar!5e0!3m2!1sen!2sin!4v1554875213647!5m2!1sen!2sin" style="width: 100%; height: 250px;padding:0.7em 0em;" frameborder="0" style="border:0" allowfullscreen>
+				</iframe>
+
+				<div>
+					<i class="fas fa-building" style="margin-right: 10px;"></i>Street no.9, Xyz city<br>
+					<i class="fas fa-envelope" style="margin-right: 10px;"></i>xyz@mail.com <br>
+					<i class="fas fa-phone" style="margin-right: 10px;"></i>+91 987654321
+				</div>			
+			</div>
+		</div>
+	</section>
+</div>
+
+</body>
 <script>
 $(function(){
   $('a').each(function() {
@@ -21,57 +121,20 @@ $(function(){
     }
   });
 });
-	
+/*------toggle------*/
+$(document).ready(function(){
+	$('.hm_togglea').click(function() {
+	    $('.hb_toggle').css("display","block");
+	    $('.navbarhid').css("display","none");
+
+	});
+});
+$(document).ready(function(){
+	$('.hm_toggled').click(function() {
+	    $('.hb_toggle').css("display","none");
+	    	$('.navbarhid').css("display","block");
+	});
+
+});
 </script>
-</head>
-<!-- External CSS-->
-<link rel="stylesheet" type="text/css" href="style.css">
-<body style="background-image: url(images/gra4.png);" >	
-	
-	<!--Navbar-->
-	<nav>
-		<ul id="nav1" >
-			Harbans Industries
-		</ul>	
-		<ul id="nav2">
-			<li><a href="contact.html">Contact Us</a></li>
-			<li>|</li>
-			<li><a href="products.html">Products</a></li>
-			<li>|</li>
-			<li><a href="index.html">Home</a></li>
-		</ul>		
-	</nav>
-
-<section id="contact_sec">
-	<div class="row">
-		<div class="col-sm-7">
-			<form>
-				<input type="" name="" placeholder=" Your Name*" class="input1">
-				<input type="" name="" placeholder="Your Country*" class="input1"><br>
-				<input type="" name="" placeholder="E-mail*" class="input1">
-				<input type="" name="" placeholder="Phone no.*" class="input1"><br>
-				<input type="textarea" name="" placeholder="Message"  class="input2"><br>
-				<span style="font-family: 'Montserrat', sans-serif; font-weight: 500;padding:">Nature of business:-</span>
-				<label class="radio-inline"><input type="radio" name="business" checked>Wholesale</label>
-				<label class="radio-inline"><input type="radio" name="business" >Retail</label>
-				<label class="radio-inline"><input type="radio" name="business">Other</label> <br>
-				<span style="font-family: 'Montserrat', sans-serif; font-weight: 500;">Company type:-</span>
-				<label class="radio-inline" ><input type="radio" name="Company" checked>Retail</label>
-				<label class="radio-inline"><input type="radio" name="Company">Bulk</label>
-				<button>Send Message</button>			
-			</form>			
-		</div>
-		<div class="col-sm-5">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3510.627241806035!2d77.31272521744383!3d28.370117199999992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cdc6ddc0701df%3A0x8d9acfc7d0d3f1f7!2sEscorts+Mujesar!5e0!3m2!1sen!2sin!4v1554875213647!5m2!1sen!2sin" style="width: 100%; height: 250px;" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-			<div style="width: 100%;margin-top: 5%;">
-				<i class="fas fa-building" style="margin-right: 10px;"></i>Street no.9, Xyz city<br>
-				<i class="fas fa-envelope" style="margin-right: 10px;"></i>xyz@mail.com <br>
-				<i class="fas fa-phone" style="margin-right: 10px;"></i>+91 987654321
-			</div>			
-		</div>
-	</div>
-</section>
-
-</body>
 </html>
