--- a/products.html
+++ b/products.html
@@ -38,33 +38,38 @@ $(document).ready(function(){
 <!-- External CSS-->
 <link rel="stylesheet" type="text/css" href="style.css">
 <body style="background-image: url(images/gra4.png);">	
-	 <!--<div id="myCarousel" class="carousel slide" data-ride="carousel" style="position: absolute; top: 0px;">
-	    Wrapper for slides 
-	    <div class="carousel-inner">
-  		    <div class="item ">
-    	 	   <img src="images/pic6.jpeg" alt='image'>
-    		</div>
-       		<div class="item active ">
-    		    <img src="images/pic5.jpg" alt='image'>
-      		</div>
-       		<div class="item ">
-        		<img src="images/pic4.jpg" alt='image'>
-      	    </div>
-		</div>
-	</div>-->
-	<!--Navbar-->
-	<nav>
-		<ul id="nav1" >
-			Harbans Industries
-		</ul>	
-		<ul id="nav2">
-			<li><a href="contact.html">Contact Us</a></li>
-			<li>|</li>
+	<nav class="navbar navbar-fixed-top ">
+		<div class="navbar-header">
+      		<a class="navbar-brand" href="#">Harbans Industries</a>
+   		</div>	
+		<ul class="nav navbar-nav nav_e">
+			<li class="active"><a href="contact.html">Home</a></li>
 			<li><a href="products.html">Products</a></li>
-			<li>|</li>
-			<li><a href="index.html">Home</a></li>
-		</ul>		
+			<li><a  href="index.html" >Contact Us</a></li>			
+		</ul>	
+		<ul  class="nav navbar-nav nav_c">
+			<li><a class="disabled"><i class="fas fa-bars hm_togglea" ></i></a></li>	
+			
+		</ul>
 	</nav>
+
+	<!------navbar toggle-------->
+	<nav class="hb_toggle">
+		<div>
+			<ul class="nav navbar-nav">
+				<li><a class="hm_toggleda"><i class="fas fa-times hm_toggled" style="font-size: 28px;background-color: transparent;color: #000;"></i></a>
+				</li>
+			</ul>
+			<div class="hb_toggle_n">
+				<ul class="nav ">
+					<li class="active ml-auto"><a href="contact.html">Home</a></li>
+					<li><a href="products.html">Products</a></li>
+					<li><a  href="index.html" >Contact Us</a></li>			
+				</ul>	
+			</div>
+		</div>
+	</nav>
+
 	
 
 
@@ -91,7 +96,7 @@ $(document).ready(function(){
 						    </div>
 						</div> 						
 					</div>
-					<div class="name">Lorem 1 <a href="#" target="blank">info</a></div> 	
+					<div class="name">Lorem 1 <a href="" target="blank"></a></div> 	
 				</div>
 				<div class="pro_box21">
 					<div class="info_box" >
