--- a/test.html
+++ b/test.html
@@ -1,30 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="utf-8">
-<title>Change Image Source on Click in jQuery</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-    .card{
-        margin: 30px;
-    }
-</style>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+body {
+  font-family: 'Lato', sans-serif;
+}
 
-<script>
-$(document).ready(function(){
-    $("img").click(function(){
-        // Change src attribute of image
-        $(this).attr("src", "images/demo1.png");
-    });    
-});
-    
-</script>
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
+</style>
 </head>
 <body>
-    <div class="card">
-        <img src="images/demo2.png" alt="Poker Card" id="myimg">
-    </div>
-    <div id="hey"></div>
-    <p><strong>Note:</strong> Click on the image to change its source.</p>
+
+<div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+  </div>
+</div>
+
+
+<span
+style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
+<script>
+function openNav() {
+  document.getElementById("myNav").style.width = "100%";
+}
+
+function closeNav() {
+  document.getElementById("myNav").style.width = "0%";
+}
+</script>
+     
 </body>
-</html>                            
+</html>
