--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 
 	<!-----Fixed Button---->
 	<div class="fixed_btn">
-		<a href=""><img src="images/message.jpg" id="fix_msg"></a>
+		<a href=""><!--img src="images/message.jpg" ></a--><i class="fab fa-facebook-messenger" style="font-size: 3em" id="fix_msg"></i></a>
+		
 		<div class="fix_options">
-		<a href="https://api.whatsapp.com/send?phone=919582234772"><img src="images/whatsapp.png"  id="fix_msg1"></a>
-		<a href=""><img src="images/mail.png"  id="fix_msg2"></a>
+		<a href="https://api.whatsapp.com/send?phone=919582234772"><!--img src="images/whatsapp.png"  --> <i class="fab fa-whatsapp" style="font-size:3em" aria-hidden="true" id="fix_msg1"></i></a>
+		<a href=""><!--img src="images/mail.png"  --><i class="far fa-envelope" style="font-size: 3em" id="fix_msg2"></i></a>
+		
 		</div>
 	</div>
 
