--- a/products.html
+++ b/products.html
@@ -88,7 +88,7 @@
 								    </div>
 								</div> 						
 							</div>
-							<div class="name">Lorem 1 <a href="" target="blank"></a></div>
+							<div class="pdt_clnk"><a href="product_info.html" target="_blank">Lorem 1</a></div>
 						</div> 	
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -99,7 +99,7 @@
 									    <div class="text">Hello World</div>
 									</div>  							
 							</div>
-							<div class="name">Lorem 2</div> 
+							<div class="pdt_clnk"><a href="product_info.html" target="_blank">Lorem 2</a></div>
 						</div>
 					</div>
 					<div class=" col-md-4 col-sm-6">
@@ -110,7 +110,7 @@
 									    <div class="text">Hello World</div>
 									  </div>  							
 							</div>
-							<div class="name">Lorem 3</div> 
+							<div class="pdt_clnk"><a href="product_info.html" target="_blank">Lorem 3</a></div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -121,7 +121,7 @@
 									    <div class="text">Hello World</div>
 									</div>  							
 							</div>
-							<div class="name">Lorem 4</div> 
+							<div class="pdt_clnk"><a href="product_info.html" target="_blank">Lorem 4</a></div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -132,7 +132,7 @@
 									    <div class="text">Hello World</div>
 									</div>  							
 							</div>
-							<div class="name">Lorem 5</div> 
+							<div class="pdt_clnk"><a href="product_info.html" target="_blank">Lorem 5</a></div> 
 						</div>
 					</div>
 				</div>
